Fixed the one line field on mobile

--- a/src/client/components/AddUserForm/AddUserForm.css
+++ b/src/client/components/AddUserForm/AddUserForm.css
@@ -3,7 +3,6 @@
 
 .inputWrapper {
   position: relative;
-  border-bottom: 1px solid grayLighter;
   margin-bottom: 10px;
 }
 
